<resources>
    <string name="app_name">MobiCom</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="float_management">Float Management</string>
    <string name="reports">Reports</string>
    <string name="transaction_history">Transaction History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="airtime">Airtime</string>
    <string name="bill_payments">Bill Payments</string>
    <string name="cash_payments">Cash Payments</string>
    <string name="momo_agency">MoMo Agency</string>
    <string name="agency_banking">Agency Banking</string>
    <string name="dfs">DFS</string>
    <string name="airtel">Airtel</string>
    <string name="float_balance">Float Balance:</string>
    <string name="top_up">top up</string>
    <string name="mtn">MTN</string>
    <string name="zamtel">Zamtel</string>
    <string name="liquid">Liquid</string>
    <string name="electricity">Electricity</string>
    <string name="water">Water</string>
    <string name="enter_customer_number">Enter customer number:</string>
    <string name="customer_number">Customer Number e.g (09xxxxxxxx)</string>
    <string name="enter_amount">Enter amount:</string>
    <string name="amount">Amount</string>
    <string name="airtime_logo">Airtime Logo</string>
    <string name="buy_airtime">Buy Airtime</string>
    <string name="enter_meter_number">Enter meter number:</string>
    <string name="meter_number">Meter number</string>
    <string name="pay_bill">Pay bill</string>
    <string name="pay_tv">Pay TV</string>
    <string name="dstv">DSTV</string>
    <string name="gotv">GOTV</string>
    <string name="topstar">TopStar</string>
    <string name="bill_logo">Bill logo</string>
    <string name="tv_logo">tv logo</string>
    <string name="account_number">Account Number</string>
    <string name="enter_account_number">Enter account number:</string>
    <string name="account_balance">Account Balance:</string>
    <string name="loading">Loading...</string>
    <string name="firstname">firstname</string>
    <string name="lastname">lastname</string>
    <string name="airtel_money">Airtel Money</string>
    <string name="mtn_momo">MTN MoMo</string>
    <string name="zamtel_kwacha">Zamtel Kwacha</string>
    <string name="pay">Pay</string>
    <string name="mobile_money_logo">Mobile money logo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="enter_number">Enter number</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="phone_number">Phone number:</string>
    <string name="pin_code">Pin Code:</string>
    <string name="mobicom_merchant_pos">MobiCom Merchant POS</string>
    <string name="logout">Logout</string>
    <string name="msg_token_fmt">InstanceID Token: %s</string>
    <string name="fcm_message">FCM Message</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
</resources>