<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.BuyAirtimeActivity">

    <ImageView
        android:id="@+id/imgAirtimeLogo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/airtime_logo"
        android:src="@drawable/zamtel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:labelFor="@+id/inputCustomerNumber"
        android:text="@string/enter_customer_number" />

    <EditText
        android:id="@+id/inputCustomerNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/customer_number"
        android:inputType="phone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:labelFor="@+id/inputAmount"
        android:text="@string/enter_amount" />

    <EditText
        android:id="@+id/inputAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnBuyAirtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/DodgerBlue"
        android:text="@string/buy_airtime"
        android:textColor="@color/White" />

</LinearLayout>